--- a/mu-plugins/blocks/global-header-footer/postcss/header/header.pcss
+++ b/mu-plugins/blocks/global-header-footer/postcss/header/header.pcss
@@ -33,7 +33,8 @@ html {
 
 	& > * {
 		flex-shrink: 0;
-		padding: 60px var(--wp--style--block-gap) 17px;
+		padding-left: var(--wp--style--block-gap);
+		padding-right: var(--wp--style--block-gap);
 		margin: 0;
 
 		@media (--tablet) {
